--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,9 @@ name: MVS Compiler CI
 
    on:
      push:
-       branches:
-         - main
-         - develop
+       branches: [main]
      pull_request:
-       branches:
-         - main
-         - develop
+       branches: [main]
 
    jobs:
      test:
