--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,25 @@
 name: MVS Compiler CI
-
-   on:
-     push:
-       branches: [main]
-     pull_request:
-       branches: [main]
-
-   jobs:
-     test:
-       runs-on: ubuntu-latest
-
-       steps:
-       - name: Checkout code
-         uses: actions/checkout@v4
-
-       - name: Install dependencies
-         run: |
-           sudo apt-get update
-           sudo apt-get install -y flex bison gcc llvm-18-dev
-
-       - name: Build and test
-         run: |
-           make clean
-           make build
-           ./run_tests.sh
+on:
+  push:
+    branches:
+      - main
+      - develop
+  pull_request:
+    branches:
+      - main
+      - develop
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y flex bison gcc llvm-18-dev
+    - name: Build and test
+      run: |
+        make clean
+        make build
+        ./run_tests.sh
